tests/kyverno-policies/add-statefulset-scratch-user/paas-statefulset-patched.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: paas-statefulset
  namespace: paas
spec:
  volumeClaimTemplates:
    - metadata:
        name: paas-statefulset-pvc
        annotations:
          osc.edu/fileset: "test-fileset"
          osc.edu/scratch-user: "test-user"
      spec:
        storageClassName: local-scratch
