tests/kyverno-policies/add-statefulset-scratch-user/webservice-statefulset-patched.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: webservice-statefulset
  namespace: webservice
  labels:
    osc.edu/service-account: "test-user"
  annotations:
    osc.edu/scratch-user: test-user
spec:
  volumeClaimTemplates:
    - metadata:
        name: webservice-statefulset-pvc
        annotations:
          osc.edu/fileset: "test-fileset"
      spec:
        storageClassName: local-scratch
